--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "yarn tsc",
+    "build": "npx --package typescript tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"yarn tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "typescript": "^5.2.2"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.6.3",
     "concurrently": "^8.2.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "typescript": "^5.2.2"
   }
 }
