--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "20.7.0"
+  },
   "dependencies": {
     "@prisma/client": "^5.3.1",
     "cors": "^2.8.5",
