--- a/package.json
+++ b/package.json
@@ -33,12 +33,11 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.6.3",
-    "@types/supertest": "^2.0.12",
     "concurrently": "^8.2.1",
     "dotenv": "^16.3.1",
     "jest": "^29.7.0",
+    "jest-mock-extended": "^3.0.5",
     "nodemon": "^3.0.1",
-    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   }
