--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "yarn tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "dev": "ts-node-dev --respawn --transpile-only --env-file=.env src/index.ts",
     "test": "yarn jest"
   },
   "prisma": {
@@ -16,7 +16,7 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": "20.7.0"
+    "node": ">=20.7.0"
   },
   "dependencies": {
     "@prisma/client": "^5.3.1",
@@ -33,12 +33,10 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.6.3",
-    "concurrently": "^8.2.1",
-    "dotenv": "^16.3.1",
     "jest": "^29.7.0",
     "jest-mock-extended": "^3.0.5",
-    "nodemon": "^3.0.1",
     "ts-jest": "^29.1.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   }
 }
